# Diplom

./: .gitignore  CMakeLists.txt
Headers/: BPlusTree.h  ITree.h  Processing.h  TreeFactory.h
Headers/BPlusTree/: BPlusElement.h  BPlusTree.h
Headers/Lock-Free/: Chunk.h  Entry.h  EntryDataKey.h  EntryNext.h  FindResult.h  LockFreeElement.h  LockFreeStack.h  LockFreeStackElement.h  LockFreeTree.h  NodeState.h
Sources/: BPlusElement.cpp  BPlusTree.cpp  Processing.cpp  TreeFactory.cpp  main.cpp
Sources/BPlusTree/: BPlusElement.cpp  BPlusTree.cpp
Sources/Lock-Free/: LockFreeTree.cpp
